<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/logo"
            tools:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="368dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="368dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="#FAF6F6"
                android:text="@string/btn_Login"
                android:textColor="#000000"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/btn_Register"
                android:textColor="#070707"
                app:cornerRadius="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnForgotPassWord"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:backgroundTint="#FFFFFF"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            app:cornerRadius="8dp"
            app:iconPadding="8dp" />

        <TextView
            android:id="@+id/txtBreakLine"
            android:layout_width="385dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/break_line" />

        <TextView
            android:id="@+id/txtFline"
            android:layout_width="379dp"
            android:layout_height="36dp"
            android:text="@string/f_line" />

        <TextView
            android:id="@+id/txtLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>