<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="406dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/dangky"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/user_name"
                android:textColor="#2C2323"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtInputUser"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textColor="#2C2323"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtInputPassword"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName|textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/dob"
                android:textColor="#2C2323"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtInputDOB"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/validate_date"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/phone"
                android:textColor="#2C2323"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtInputPhone"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textColor="#2C2323"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtInputEmail"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName|textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/gender"
                android:textColor="#2C2323"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="250dp"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/male"
                    android:textColor="#2C2323" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/female"
                    android:textColor="#2C2323" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister1"
            android:layout_width="273dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/btn_Register"
            android:textColor="#000000" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>